# GDM-Robotics

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  Dockerfile  README.md  commitlint.config.js  configure_toolchain.sh  package-lock.json  package.json  pico_setup.sh
.devcontainer/: DockerFile  Dockerfile  devcontainer.env  devcontainer.json
.github/workflows/: arduino_lint.yml  release-please.yml
.husky/: pre-commit
Guides/: clang_style_guide.md  git_management.md  useful_commands.md
Mickey/: CMakeLists.txt
Mickey/Flowcharts/V1/: Actuation and Calibration Flow Chart v1.drawio  Calibrate_Signal.drawio  main_program.drawio
Mickey/Flowcharts/V2/: Calibrate_Signal.drawio
Mickey/Mickey Version 1/: MickeyV1.c
Mickey/Planning/: breakdown.md  clang_style_guide.md  project_breakdown.md
Mickey/src/: CMakeLists.txt  CalibrationAndActuation.c  c_toolchain_test.c
Planning/: project_breakdown.md
Sylvia/Sylvia Version 1/: SylviaV1.c
config/: .bashrc
